--- a/EW/Balancing/MM_AA.cfg
+++ b/EW/Balancing/MM_AA.cfg
@@ -84,6 +84,8 @@
 		%engageMissile = false
 		%engageGround = false
 		%engageSLW = false
+		@maxTargetingRange = 2100
+		@maxEffectiveDistance = 2000
 	}
 }
 @PART[Mg151Short]:NEEDS[SMA] {
@@ -92,6 +94,8 @@
 		%engageMissile = false
 		%engageGround = false
 		%engageSLW = false
+		@maxTargetingRange = 2100
+		@maxEffectiveDistance = 2000
 	}
 }
 @PART[MG151WingPod]:NEEDS[SMA] {
@@ -124,6 +128,8 @@
 		%engageMissile = false
 		%engageGround = true
 		%engageSLW = false
+		@maxTargetingRange = 5100
+		@maxEffectiveDistance = 5000
 	}
 }
 @PART[WW2Ho155]:NEEDS[SMA] {
@@ -132,6 +138,8 @@
 		%engageMissile = false
 		%engageGround = true
 		%engageSLW = false
+		@maxTargetingRange = 3100
+		@maxEffectiveDistance = 3000
 	}
 }
 @PART[Mk108]:NEEDS[SMA] {
@@ -140,6 +148,8 @@
 		%engageMissile = false
 		%engageGround = false
 		%engageSLW = false
+		@maxTargetingRange = 3100
+		@maxEffectiveDistance = 3000
 	}
 }
 @PART[VickersShortPod]:NEEDS[SMA] {
@@ -148,6 +158,8 @@
 		%engageMissile = false
 		%engageGround = false
 		%engageSLW = false
+		@maxTargetingRange = 3600
+		@maxEffectiveDistance = 3500
 	}
 }
 @PART[VYa23]:NEEDS[SMA] {
@@ -164,6 +176,8 @@
 		%engageMissile = false
 		%engageGround = false
 		%engageSLW = false
+		@maxTargetingRange = 2100
+		@maxEffectiveDistance = 2000
 	}
 }
 @PART[BredaSAFATLong]:NEEDS[SMA] {
@@ -172,6 +186,8 @@
 		%engageMissile = false
 		%engageGround = false
 		%engageSLW = false
+		@maxTargetingRange = 2100
+		@maxEffectiveDistance = 2000
 	}
 }
 @PART[BredaSAFATPort]:NEEDS[SMA] {
@@ -180,6 +196,8 @@
 		%engageMissile = false
 		%engageGround = false
 		%engageSLW = false
+		@maxTargetingRange = 2100
+		@maxEffectiveDistance = 2000
 	}
 }
 @PART[WW2Ho3ExposedBarrel]:NEEDS[SMA] {
@@ -188,6 +206,8 @@
 		%engageMissile = false
 		%engageGround = false
 		%engageSLW = false
+		@maxTargetingRange = 2100
+		@maxEffectiveDistance = 2000
 	}
 }
 @PART[M2Blister]:NEEDS[SMA] {
@@ -195,7 +215,9 @@
 		%engageAir = true
 		%engageMissile = false
 		%engageGround = false
-		%engageSLW = false
+		%engageSLW = 
+		@maxTargetingRange = 2100
+		@maxEffectiveDistance = 2000
 	}
 }
 @PART[M2ExposedBarrel]:NEEDS[SMA] {
@@ -204,6 +226,8 @@
 		%engageMissile = false
 		%engageGround = false
 		%engageSLW = false
+		@maxTargetingRange = 2100
+		@maxEffectiveDistance = 2000
 	}
 }
 @PART[M2GunPort]:NEEDS[SMA] {
@@ -212,6 +236,8 @@
 		%engageMissile = false
 		%engageGround = false
 		%engageSLW = false
+		@maxTargetingRange = 2100
+		@maxEffectiveDistance = 2000
 	}
 }
 @PART[M2Pod]:NEEDS[SMA] {
@@ -220,6 +246,8 @@
 		%engageMissile = false
 		%engageGround = false
 		%engageSLW = false
+		@maxTargetingRange = 2100
+		@maxEffectiveDistance = 2000
 	}
 }
 @PART[MG131]:NEEDS[SMA] {
@@ -228,6 +256,8 @@
 		%engageMissile = false
 		%engageGround = false
 		%engageSLW = false
+		@maxTargetingRange = 2100
+		@maxEffectiveDistance = 2000
 	}
 }
 @PART[shKAS]:NEEDS[SMA] {
@@ -236,6 +266,8 @@
 		%engageMissile = false
 		%engageGround = false
 		%engageSLW = false
+		@maxTargetingRange = 2100
+		@maxEffectiveDistance = 2000
 	}
 }
 @PART[WW2R4MRocket]:NEEDS[SMA] {
@@ -260,6 +292,8 @@
 		%engageMissile = false
 		%engageGround = false
 		%engageSLW = false
+		@maxTargetingRange = 2100
+		@maxEffectiveDistance = 2000
 	}
 }
 @PART[MG131zTurret]:NEEDS[SMA] {
@@ -268,6 +302,8 @@
 		%engageMissile = false
 		%engageGround = false
 		%engageSLW = false
+		@maxTargetingRange = 2100
+		@maxEffectiveDistance = 2000
 	}
 }
 
