--- a/EW/Balancing/MM_BDA.cfg
+++ b/EW/Balancing/MM_BDA.cfg
@@ -10,6 +10,8 @@
 		%useCustomBelt = True    
 		%ammoBelt = 12.7mmBullet; 12.7mmAPIBullet
 		
+		@roundsPerMinute = 900
+		@maxDeviation = 0.36
 		
 		%engageAir = true
 		%engageMissile = false
