--- a/EW/Balancing/MM_FDC.cfg
+++ b/EW/Balancing/MM_FDC.cfg
@@ -1,5 +1,116 @@
 
+@PART[T26E4]:NEEDS[SMA] {
+	@title = M26E4 Pershing
+	-MODULE[ModuleRadar] {}
+	
+	@MODULE[ModuleTurret] {
+		@pitchSpeedDPS = 14
+		@yawSpeedDPS = 14
+	}
+	@MODULE[ModuleWeapon] {
+		@maxDeviation = 0.04294
+		@maxEffectiveDistance = 6000
+		@maxTargetingRange = 6200
+	}
+}
+@PART[AbramsA2]:NEEDS[SMA] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[AMT34]:NEEDS[SMA] {
+	-MODULE[ModuleRadar] {}
+	
+	@MODULE[ModuleTurret] {
+		@pitchSpeedDPS = 11
+		@yawSpeedDPS = 11
+	}
+	@MODULE[ModuleWeapon] {
 
+		@maxDeviation = 0.041
+		@maxEffectiveDistance = 6000
+		@maxTargetingRange = 6200
+	}
+}
+@PART[FV4005]:NEEDS[SMA] {
+	@title = FV4005 Stage II
+	-MODULE[ModuleRadar] {}
+}
+@PART[HSTV]:NEEDS[SMA] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[M103]:NEEDS[SMA] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[M3Bradly]:NEEDS[SMA] {
+	@title = M3 Bradley CFV
+	-MODULE[ModuleRadar] {}
+	
+	@MODULE[ModuleWeapon] {
+		%useCustomBelt = True    
+		%ammoBelt = M791APDS; M791APDS; M791APDS; M792HEI
+	}
+}
+@PART[M42DusterAP]:NEEDS[SMA] {
+	@title = M42 Duster
+	@MODULE[ModuleWeapon] {
+		%useCustomBelt = True    
+		%ammoBelt = 40MMAPT; 40MMHEFIT; 40MMHEFIT; 40MMHEFIT
+	}
+}
+@PART[T95]:NEEDS[SMA] {
+	@title = T28 Super Heavy Tank
+	
+	@MODULE[ModuleWeapon] {
+		@roundsPerMinute = 4.5
+		@maxDeviation = 0.0425
+		@maxEffectiveDistance = 5000
+		@maxTargetingRange = 5200
+	}
+	
+	@MODULE[ModuleTurret] {
+		@pitchSpeedDPS = 13
+		@yawSpeedDPS = 13
+	}
+}
+@PART[T92HMC]:NEEDS[SMA] {
+	@title = T92 HMC
+	
+	@MODULE[ModuleTurret] {
+		@pitchSpeedDPS = 7
+		@yawSpeedDPS = 7
+	}
+	
+	@MODULE[ModuleWeapon] {
+		@roundsPerMinute = 1.5
+		@maxDeviation = 0.025
+	}
+}
+@PART[TortoiseAPCBC]:NEEDS[SMA] {
+	@title = A39 Tortoise
+	
+	@MODULE[ModuleTurret] {
+		@pitchSpeedDPS = 6
+		@yawSpeedDPS = 6
+	}
+
+	@MODULE[ModuleWeapon] {
+		@roundsPerMinute = 5
+		@maxDeviation = 0.041
+		@maxEffectiveDistance = 5000
+		@maxTargetingRange = 5200
+	}
+	
+}
+
+@PART[Luft42]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%useCustomBelt = True    
+		%ammoBelt = 40mmLuft42AP; 40mmLuft42HE; 40mmLuft42HE; 40mmLuft42HE
+		
+		@maxDeviation = 0.1
+		@maxEffectiveDistance = 4000
+		@maxTargetingRange = 4300
+	}
+}
 @PART[Elden40]:NEEDS[SMA] {
     @MODULE[ModuleRadar] {
 		@directionalFieldOfView = 10
@@ -27,33 +138,18 @@
 @PART[Strids74]:NEEDS[SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[T26E4]:NEEDS[SMA] {
-	@title = M26E4 Pershing
-	-MODULE[ModuleRadar] {}
-	
-	@MODULE[ModuleTurret] {
-		@pitchSpeedDPS = 12
-	}
-	@MODULE[ModuleWeapon] {
-		@maxDeviation = 0.04294
-		@maxEffectiveDistance = 6000
-		@maxTargetingRange = 6200
-	}
-}
-@PART[AbramsA2]:NEEDS[SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[AMT34]:NEEDS[SMA] {
-	-MODULE[ModuleRadar] {}
-	
-	@MODULE[ModuleTurret] {
-		@pitchSpeedDPS = 14
-	}
-	@MODULE[ModuleWeapon] {
 
-		@maxDeviation = 0.041
-		@maxEffectiveDistance = 6000
-		@maxTargetingRange = 6200
+
+@PART[ARL44]:NEEDS[SMA] {
+	@MODULE[ModuleTurret] {
+		@pitchSpeedDPS = 18
+		@yawSpeedDPS = 18
+	}
+	@MODULE[ModuleWeapon] {
+		@roundsPerMinute = 5
+		@maxDeviation = 0.04
+		@maxEffectiveDistance = 4000
+		@maxTargetingRange = 4300
 	}
 }
 @PART[Amx50B]:NEEDS[SMA] {
@@ -68,84 +164,26 @@
 	@title = Batignolles-Chatillon Char 25t
 	-MODULE[ModuleRadar] {}
 }
-@PART[BMP3HE]:NEEDS[SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[FV4005]:NEEDS[SMA] {
-	@title = FV4005 Stage II
-	-MODULE[ModuleRadar] {}
-}
-@PART[HSTV]:NEEDS[SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[Leopard1]:NEEDS[SMA] {
-	@title = Leopard 1A0
-	-MODULE[ModuleRadar] {}
-}
-@PART[Leopard2A5]:NEEDS[SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[M103]:NEEDS[SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[M3Bradly]:NEEDS[SMA] {
-	@title = M3 Bradley CFV
-	-MODULE[ModuleRadar] {}
-	
-	@MODULE[ModuleWeapon] {
-		%useCustomBelt = True    
-		%ammoBelt = M791APDS; M791APDS; M791APDS; M792HEI
-	}
-}
-@PART[Obj906]:NEEDS[SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[M42DusterAP]:NEEDS[SMA] {
-	@title = M42 Duster
-	@MODULE[ModuleWeapon] {
-		%useCustomBelt = True    
-		%ammoBelt = 40MMAPT; 40MMHEFIT; 40MMHEFIT; 40MMHEFIT
-	}
-}
-@PART[T95]:NEEDS[SMA] {
-	@title = T28 Super Heavy Tank
-	
-	@MODULE[ModuleWeapon] {
-		@roundsPerMinute = 4.5
-		@maxDeviation = 0.0425
-		@maxEffectiveDistance = 5000
-		@maxTargetingRange = 5200
-	}
-	
+
+
+@PART[TigerII]:NEEDS[SMA] {
 	@MODULE[ModuleTurret] {
-		@pitchSpeedDPS = 15
+		@pitchSpeedDPS = 18
+		@yawSpeedDPS = 18
 	}
-}
-@PART[T92HMC]:NEEDS[SMA] {
-	@title = T92 HMC
-	
 	@MODULE[ModuleWeapon] {
-
-		@roundsPerMinute = 1.5
-		@maxDeviation = 0.025
+		@roundsPerMinute = 4
+		@maxDeviation = 0.0405
+		@maxEffectiveDistance = 4500
+		@maxTargetingRange = 4800
 	}
-}
-@PART[TortoiseAPCBC]:NEEDS[SMA] {
-	@title = A39 Tortoise
-
-	@MODULE[ModuleWeapon] {
-		@roundsPerMinute = 5
-		@maxDeviation = 0.041
-		@maxEffectiveDistance = 5000
-		@maxTargetingRange = 5200
-	}
-	
 }
 @PART[PantherII]:NEEDS[SMA] {
 	@title = Panther II
 	
 	@MODULE[ModuleTurret] {
 		@pitchSpeedDPS = 25
+		@yawSpeedDPS = 25
 	}
 	@MODULE[ModuleWeapon] {
 		@maxDeviation = 0.041
@@ -155,41 +193,27 @@
 		@bulletType = 75mmStrv74HE, 75mmStrv74APCBC, 75MMAPFDS
 	}
 }
-@PART[Luft42]:NEEDS[SMA] {
+@PART[Leopard1]:NEEDS[SMA] {
+	@title = Leopard 1A0
+	-MODULE[ModuleRadar] {}
+}
+@PART[Leopard2A5]:NEEDS[SMA] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[Wirbelwind]:NEEDS[SMA] {
 	@MODULE[ModuleWeapon] {
-		%useCustomBelt = True    
-		%ammoBelt = 40mmLuft42AP; 40mmLuft42HE; 40mmLuft42HE; 40mmLuft42HE
+		@maxDeviation = 0.09
+		@maxEffectiveDistance = 2500
+		@maxTargetingRange = 2800
 	}
 }
 
-
-@PART[ARL44]:NEEDS[SMA] {
-	@MODULE[ModuleTurret] {
-		@pitchSpeedDPS = 18
-	}
-	@MODULE[ModuleWeapon] {
-		@roundsPerMinute = 5
-		@maxDeviation = 0.0437
-		@maxEffectiveDistance = 4000
-		@maxTargetingRange = 4300
-	}
-}
-@PART[TigerII]:NEEDS[SMA] {
-	@MODULE[ModuleTurret] {
-		@pitchSpeedDPS = 14
-	}
-	@MODULE[ModuleWeapon] {
-		@roundsPerMinute = 4
-		@maxDeviation = 0.0405
-		@maxEffectiveDistance = 4500
-		@maxTargetingRange = 4800
-	}
-}
 
 
 @PART[BMP3HE]:NEEDS[SMA] {
 	@title = 2A70 (BMP-3)
 	@description = The Object 688M / BMP-3 Soviet and Russian infantry fighting vehicle turret armed with 2A70 100mm gun as part of the 2K23 Complex. BMP-3 is a successor to the BMP-1 and BMP-2. The abbreviation BMP stands for boevaya mashina pehoty (боевая машина пехоты, literally "infantry combat vehicle").
+	-MODULE[ModuleRadar] {}
 	@MODULE[ModuleWeapon] {
 		%shortName = 100mm 2A70
 	}
@@ -201,6 +225,7 @@
 	-MODULE[ModuleRadar] {}
 	@MODULE[ModuleTurret] {
 		@pitchSpeedDPS = 25
+		@yawSpeedDPS = 25
 	}
 	
 	@MODULE[ModuleWeapon] {
@@ -218,7 +243,8 @@
 	
 	-MODULE[ModuleRadar] {}
 	@MODULE[ModuleTurret] {
-		@pitchSpeedDPS = 14
+		@pitchSpeedDPS = 12
+		@yawSpeedDPS = 12
 	}
 	@MODULE[ModuleWeapon] {
 		%shortName = 130mm S-70
@@ -239,6 +265,7 @@
 @PART[Obj906]:NEEDS[SMA] {
 	@title = D-58 (PT-85)
 	@description = The Object 906 / PT-85 amphibious light tank turret armed with D-58 85mm gun. The success of the PT-76 amphibious tank prompted the development of a successor with improved characteristics on the battlefield. The PT-76 chassis was taken up by the Stalingrad Tractor Factory in 1962 to be improved. The vehicle was given the project name Object 906. Two were produced and tested between 1962-1963, each armed with an 85 mm cannon and also implemented the newer technology such as gun stabilization, auto-loader, and a welded aluminium armour for weight-saving. The design proved reliable with a 300 hp engine and could reach a top speed of 75 km/h. Had it been adopted, the Object 906 would've been given the name PT-85, but the vehicle design never left the prototype stages and consequently never adopted. A single prototype still exists in Kubinka Tank Museum.
+	-MODULE[ModuleRadar] {}
 	@MODULE[ModuleWeapon] {
 		%shortName = 85mm D-58
 	}
@@ -257,6 +284,7 @@
 	-MODULE[ModuleRadar] {}
 	@MODULE[ModuleTurret] {
 		@pitchSpeedDPS = 20
+		@yawSpeedDPS = 20
 	}
 	@MODULE[ModuleWeapon] {
 		%shortName = 85mm ZIS-S-53
@@ -274,6 +302,7 @@
 	
 	@MODULE[ModuleTurret] {
 		@pitchSpeedDPS = 18
+		@yawSpeedDPS = 18
 	}
 	@MODULE[ModuleWeapon] {
 		%shortName = 100mm 52PT412
