--- a/EW/Balancing/MM_KField.cfg
+++ b/EW/Balancing/MM_KField.cfg
@@ -327,6 +327,10 @@
 		
 		%useCustomBelt = True    
 		%ammoBelt =  20x110mmAPShell; 20x110mmAPShell; 20x110mmHEShell; 20x110mmHEShell; 20x110mmAPShell;
+		
+		@maxDeviation = 0.2
+		@maxEffectiveDistance = 3000
+		@maxTargetingRange = 3200
 	}
 }
 @PART[METEOR]:NEEDS[SMA] {
@@ -346,6 +350,10 @@
 		
 		%useCustomBelt = True    
 		%ammoBelt =  20x82mmAPShell; 20x82mmAPShell; 20x82mmMGShell; 20x82mmMGShell; 20x82mmAPShell;
+		
+		@maxDeviation = 0.28
+		@maxEffectiveDistance = 2500
+		@maxTargetingRange = 2800
 	}
 }
 @PART[MICA_IR]:NEEDS[SMA] {
@@ -365,6 +373,10 @@
 		
 		%useCustomBelt = True    
 		%ammoBelt =  30x173Bullet; 30x173Bullet; 30x173HEBullet; 30x173HEBullet; 30x173Bullet;
+		
+		@maxDeviation = 0.15
+		@maxEffectiveDistance = 3000
+		@maxTargetingRange = 3200
 	}
 }
 @PART[VickersMG]:NEEDS[SMA] {
@@ -376,6 +388,9 @@
 		
 		%useCustomBelt = True
 		%ammoBelt = 7.7x56RmmBullet; 7.7x56RmmBullet; 7.7x56RmmBullet; 7.7x56RmmBulletHEI;
+		
+		@maxEffectiveDistance = 2000
+		@maxTargetingRange = 2100
 	}
 }
 
@@ -620,6 +635,10 @@
 		
 		%useCustomBelt = True    
 		%ammoBelt =  20x99mmBZShell; 20x99mmBZShell; 20x99mmOZShell; 20x99mmOZShell; 20x99mmBZShell;
+		
+		@maxDeviation = 0.26
+		@maxEffectiveDistance = 2500
+		@maxTargetingRange = 2800
 	}
 }
 @PART[SS-26]:NEEDS[SMA] {
@@ -738,6 +757,9 @@
 		
 		%useCustomBelt = True    
 		%ammoBelt =  12.7x99mmBullet; 12.7x81SRmmBulletAP;
+		
+		@roundsPerMinute = 900
+		@maxDeviation = 0.36
 	}
 }
 @PART[TOW2B]:NEEDS[SMA] {
