--- a/EW/Edits.cfg
+++ b/EW/Edits.cfg
@@ -44,6 +44,47 @@
 	%MODULE[ModuleSelfSealingTank] {}
 }
 
+
++PART[bahaH70Turret] {
+	@name = HKAPS
+	@title = Hard-Kill Active Protection System.
+	@rescaleFactor = 0.12
+	@mass = 0.1
+	@manufacturer = Kerbal Kombat Anthology
+	@description = The Hard-Kill Active Protection System fires on incoming missiles to protect the vehicle.
+	@author = Toonu
+	
+	@MODULE[ModuleWeapon] {
+		@shortName = HK-APS
+		@weaponType = ballistic
+
+		@roundsPerMinute = 20
+		@maxEffectiveDistance = 200
+		@maxTargetingRange = 1000
+		%maxDeviation = 0.005
+		
+		tracerLength = 0
+		requestResourceAmount = 2
+		
+		@bulletType = HKAPSR
+		
+		engageAir = false
+		engageMissile = true
+		engageGround = false
+		engageSLW = false
+	}
+	@MODULE[ModuleTurret] {
+		@pitchSpeedDPS = 250
+		@yawSpeedDPS = 250
+
+		@maxPitch = 35
+		@minPitch = -30
+
+		@yawRange = 360
+	}
+
+}
+
 //Naval Engines
 
 +PART[LBPMdrive1]:NEEDS[LShipPartsRequired] {
