--- a/EW/Bullets.cfg
+++ b/EW/Bullets.cfg
@@ -1,5 +1,23 @@
 
 
+BULLET {
+	name = HKAPSR
+	caliber = 20
+	bulletVelocity = 500
+	bulletMass = 0.012
+	//HE Bullet Values
+	explosive = True
+	incendiary = True
+	tntMass = 1
+	fuzeType = Proxi 
+	projectileColor = 254, 185, 0, 160 //RGBA 0-255 
+	fadeColor = False
+	startColor = 254, 185, 25, 120
+	subProjectileCount = 2
+	apBulletMod = 1
+	bulletDragTypeName = AnalyticEstimate
+}
+
 
 BULLET {
     name = 27x145APBullet
