Fixing typo in AA MM. 50s missile balance.

--- a/EW/Balancing/MM_AA.cfg
+++ b/EW/Balancing/MM_AA.cfg
@@ -215,7 +215,7 @@
 		%engageAir = true
 		%engageMissile = false
 		%engageGround = false
-		%engageSLW = 
+		%engageSLW = false
 		@maxTargetingRange = 2100
 		@maxEffectiveDistance = 2000
 	}
