--- a/Missiles/agm_AUMN2.cfg
+++ b/Missiles/agm_AUMN2.cfg
@@ -49,18 +49,28 @@ PART {
 		
 		// --- Targeting ---
 		missileType = missile
-		homingType = BeamRiding
-		targetingType = laser
-		activeRadarRange = 0
+		homingType = Cruise
+		targetingType = gps
+		activeRadarRange = 10000
 		maxOffBoresight = 180
 		lockedSensorFOV = 30
-		radarLOAL = false
+		radarLOAL = true
+		activeRadarLockTrackCurve {
+			key = 0 0
+			key = 50 0
+		}
 	
 		
 		// --- Missile specific ---¨
 		agmDescentRatio = 2.5
 		heatThreshold = 5
 		allAspect = false
+		
+		terminalManeuvering = false // Shaking before hit to prevent CIWS.
+		terminalGuidanceActive = true
+		terminalGuidanceShouldActivate = true // Terminal Guidance Kit
+		terminalGuidanceType = radar
+		terminalGuidanceDistance = 10000
 		
 		// --- Warhead ---
 		proxyDetonate = false
