--- a/Missiles/agm_KS1.cfg
+++ b/Missiles/agm_KS1.cfg
@@ -50,7 +50,7 @@ MODULE {
 		// --- Targeting ---
 		missileType = missile
 		homingType = Cruise
-		targetingType = laser
+		targetingType = gps
 		activeRadarRange = 10000
 		maxOffBoresight = 100
 		lockedSensorFOV = 100
@@ -62,8 +62,8 @@ MODULE {
 		
 		//Terminal Guidance
 		terminalManeuvering = false // Shaking before hit to prevent CIWS.
-		terminalGuidanceActive = false
-		terminalGuidanceShouldActivate = false // Terminal Guidance Kit
+		terminalGuidanceActive = true
+		terminalGuidanceShouldActivate = true // Terminal Guidance Kit
 		terminalGuidanceType = radar
 		terminalGuidanceDistance = 10000
 	
