Balance: AAM 60s missiles phase 1.

--- a/Missiles/agm_AUMN2.cfg
+++ b/Missiles/agm_AUMN2.cfg
@@ -52,19 +52,18 @@ PART {
 		homingType = Cruise
 		targetingType = gps
 		activeRadarRange = 10000
-		maxOffBoresight = 180
-		lockedSensorFOV = 30
+		maxOffBoresight = 360
+		lockedSensorFOV = 180
 		radarLOAL = true
 		activeRadarLockTrackCurve {
 			key = 0 0
-			key = 50 0
+			key = 10 0
 		}
 	
 		
-		// --- Missile specific ---¨
-		agmDescentRatio = 2.5
-		heatThreshold = 5
-		allAspect = false
+		// --- Missile specific ---
+		minLaunchSpeed = 120
+		CruiseSpeed = 280
 		
 		terminalManeuvering = false // Shaking before hit to prevent CIWS.
 		terminalGuidanceActive = true
@@ -74,7 +73,6 @@ PART {
 		
 		// --- Warhead ---
 		proxyDetonate = false
-		DetonationDistance = 0
 	
 		// --- Propulsion ---
 		thrust = 50
@@ -93,7 +91,7 @@ PART {
 		steerMult = 8
 		maxTorque = 90
 		maxAoA = 20
-		maxTurnRateDPS = 25
+		maxTurnRateDPS = 3.5
 		torqueRampUp = 50
 		
 		// --- Booster & Animation & Sound ---
@@ -117,7 +115,7 @@ PART {
 
 	MODULE {
 		name = BDExplosivePart
-		tntMass = 270
+		tntMass = 13500
 	}
 
 }
