--- a/Missiles/agm_KS1.cfg
+++ b/Missiles/agm_KS1.cfg
@@ -39,7 +39,7 @@ PART {
 	maximum_drag = 0.01
 	minimum_drag = 0.01
 	angularDrag = 2
-	crashTolerance = 5
+	crashTolerance = 350
 	maxTemp = 3600
 
 MODULE {
@@ -52,12 +52,12 @@ MODULE {
 		homingType = Cruise
 		targetingType = gps
 		activeRadarRange = 10000
-		maxOffBoresight = 100
-		lockedSensorFOV = 100
+		maxOffBoresight = 360
+		lockedSensorFOV = 180
 		radarLOAL = true
 		activeRadarLockTrackCurve {
 			key = 0 0
-			key = 50 0
+			key = 20 0
 		}
 		
 		//Terminal Guidance
@@ -77,12 +77,12 @@ MODULE {
 		
 		minLaunchSpeed = 125
 		CruiseSpeed = 309
-		CruisePredictionTime = 5
+		CruisePredictionTime = 8
 		CruiseAltitude = 2000
 		
 		// --- Warhead ---
-		proxyDetonate = false
-		DetonationDistance = 0
+		proxyDetonate = true
+		DetonationDistance = 0.1
 
 		// --- Propulsion ---
 		thrust = 70	
@@ -101,7 +101,7 @@ MODULE {
 		steerMult = 8
 		maxTorque = 70
 		maxAoA = 20
-		maxTurnRateDPS = 25
+		maxTurnRateDPS = 3.5
 		torqueRampUp = 50
 		
 		// --- Booster & Animation & Sound ---
@@ -111,13 +111,13 @@ MODULE {
 		boostTransformName = boostTransform
 		boostExhaustTransformName = boostTransform
 		boostExhaustPrefabPath = BDArmory/Models/exhaust/mediumExhaust
-		exhaustPrefabPath = BDArmory/Models/exhaust/smallExhaust
+		exhaustPrefabPath = KKA/Exhaust/ExhaustSmallBlue
 		boostClipPath = BDArmory/Sounds/jet
 		audioClipPath = BDArmory/Sounds/jet
 
 		// --- Engagement Rules --- 
 		minStaticLaunchRange = 700
-		maxStaticLaunchRange = 90000
+		maxStaticLaunchRange = 40000
 		engageAir = false
 		engageMissile = false
 		engageGround = true
@@ -126,6 +126,6 @@ MODULE {
 	
 	MODULE {
 		name = BDExplosivePart
-		tntMass = 600
+		tntMass = 19000
 	}
 }
