--- a/Missiles/sam_CIM10.cfg
+++ b/Missiles/sam_CIM10.cfg
@@ -60,7 +60,7 @@ PART {
 		activeRadarRange = 16000
 		maxOffBoresight = 120
 		lockedSensorFOV = 20
-		radarLOAL = true
+		radarLOAL = false
 		
 		//Terminal Guidance
 		terminalManeuvering = false // Shaking before hit to prevent CIWS.
