--- a/Missiles/sam_MIM3.cfg
+++ b/Missiles/sam_MIM3.cfg
@@ -60,7 +60,7 @@ PART {
 		activeRadarRange = 0
 		maxOffBoresight = 180
 		lockedSensorFOV = 15
-		radarLOAL = true
+		radarLOAL = false
 		
 		//Terminal Guidance
 		terminalManeuvering = false // Shaking before hit to prevent CIWS.
