--- a/Missiles/sam_BloodhoundMk1.cfg
+++ b/Missiles/sam_BloodhoundMk1.cfg
@@ -54,7 +54,7 @@ PART {
 		activeRadarRange = 0
 		maxOffBoresight = 120
 		lockedSensorFOV = 7
-		radarLOAL = true
+		radarLOAL = false
 		
 		//Terminal Guidance
 		terminalManeuvering = false // Shaking before hit to prevent CIWS.
