--- a/Missiles/aam_K5.cfg
+++ b/Missiles/aam_K5.cfg
@@ -56,20 +56,11 @@
 		lockedSensorFOV = 3
 		radarLOAL = false
 		
-		//Terminal Guidance
-		terminalManeuvering = false // Shaking before hit to prevent CIWS.
-		terminalGuidanceShouldActivate = false // Terminal Guidance Kit
-		terminalGuidanceType = heat
-		terminalGuidanceDistance = 0
-		
 		// --- Missile specific ---
-		agmDescentRatio = 4
-		heatThreshold = 320
 		allAspect = false
 		
 		// --- Warhead ---
-		proxyDetonate = true
-		DetonationDistance = 2
+		proxyDetonate = false
 
 		// --- Propulsion ---
 		thrust = 12
@@ -86,7 +77,7 @@
 		liftArea = 0.002
 		steerMult = 4
 		maxTorque = 10
-		maxAoA = 8
+		maxAoA = 10
 		maxTurnRateDPS = 8
 		torqueRampUp = 50
 		
@@ -102,7 +93,7 @@
 		
 
 		// --- Engagement Rules --- 
-		minStaticLaunchRange = 200
+		minStaticLaunchRange = 0
 		maxStaticLaunchRange = 6000
 		engageAir = true
 		engageMissile = false
