--- a/Missiles/sam_CIM10.cfg
+++ b/Missiles/sam_CIM10.cfg
@@ -59,8 +59,8 @@ PART {
 		targetingType = radar
 		activeRadarRange = 16000
 		maxOffBoresight = 120
-		lockedSensorFOV = 20
-		radarLOAL = false
+		lockedSensorFOV = 9
+		radarLOAL = true
 		
 		//Terminal Guidance
 		terminalManeuvering = false // Shaking before hit to prevent CIWS.
@@ -69,8 +69,6 @@ PART {
 		terminalGuidanceDistance = 16000
 		
 		// --- Missile specific ---
-		agmDescentRatio = 4
-		heatThreshold = 100
 		allAspect = false
 		
 		// --- Warhead ---
@@ -91,8 +89,8 @@ PART {
 		optimumAirspeed = 891
 		liftArea = 0.5
 		steerMult = 240
-		maxTorque = 160
-		maxAoA = 20
+		maxTorque = 360
+		maxAoA = 70
 		maxTurnRateDPS = 60
 		torqueRampUp = 50
 		
