--- a/Missiles/sam_FIM43.cfg
+++ b/Missiles/sam_FIM43.cfg
@@ -43,7 +43,7 @@ PART {
 	dragModelType = default
 	maximum_drag = 0.0001
 	minimum_drag = 0.00005
-	angularDrag = 1
+	angularDrag = 0.05
 	crashTolerance = 5
 	maxTemp = 3600
 
@@ -57,7 +57,7 @@ MODULE {
 		homingType = aam
 		targetingType = heat
 		activeRadarRange = 0
-		maxOffBoresight = 90
+		maxOffBoresight = 15
 		lockedSensorFOV = 8
 		radarLOAL = false
 		
@@ -71,19 +71,9 @@ MODULE {
 			key = 180 0
         }
 		
-		//Terminal Guidance
-		terminalManeuvering = false // Shaking before hit to prevent CIWS.
-		terminalGuidanceShouldActivate = false // Terminal Guidance Kit
-		terminalGuidanceType = heat
-		terminalGuidanceDistance = 0
-		
 		// --- Missile specific ---
-		agmDescentRatio = 4
 		heatThreshold = 50
 		allAspect = false
-		deployAnimationName = deploy
-		deployedDrag = 0.0002
-		deployTime = 0.5
 		
 		// --- Warhead ---
 		proxyDetonate = true
@@ -101,7 +91,7 @@ MODULE {
 		// --- Aerodynamics ---
 		aero = true
 		optimumAirspeed = 580
-		liftArea = 0.005
+		liftArea = 0.0000001
 		steerMult = 1
 		maxTorque = 15
 		maxAoA = 15
