--- a/Missiles/sam_MIM3.cfg
+++ b/Missiles/sam_MIM3.cfg
@@ -59,23 +59,15 @@ PART {
 		targetingType = radar
 		activeRadarRange = 0
 		maxOffBoresight = 180
-		lockedSensorFOV = 15
+		lockedSensorFOV = 12
 		radarLOAL = false
 		
-		//Terminal Guidance
-		terminalManeuvering = false // Shaking before hit to prevent CIWS.
-		terminalGuidanceShouldActivate = false // Terminal Guidance Kit
-		terminalGuidanceType = heat
-		terminalGuidanceDistance = 0
-		
 		// --- Missile specific ---
-		agmDescentRatio = 4
-		heatThreshold = 100
 		allAspect = false
 		
 		// --- Warhead ---
 		proxyDetonate = true
-		DetonationDistance = 70
+		DetonationDistance = 5 //70
 
 		// --- Propulsion ---
 		thrust = 410
@@ -90,16 +82,16 @@ PART {
 		optimumAirspeed = 771.5
 		aero = true
 		liftArea = 0.05
-		steerMult = 10
-		maxTorque = 170
-		maxAoA = 14
+		steerMult = 80
+		maxTorque = 220
+		maxAoA = 30
 		maxTurnRateDPS = 20
 		torqueRampUp = 50
 		
 		// --- Booster & Animation & Sound ---
 		decoupleBoosters = true
 		boosterMass = 0.7
-		boosterDecoupleSpeed = 2
+		boosterDecoupleSpeed = 1
 		boostTransformName = MIM-3B
 		boostExhaustTransformName = boostTransform
 		boostExhaustPrefabPath = BDArmory/Models/exhaust/mediumExhaust
