--- a/Missiles/sam_RIM2.cfg
+++ b/Missiles/sam_RIM2.cfg
@@ -59,23 +59,15 @@ PART {
 		targetingType = radar
 		activeRadarRange = 0
 		maxOffBoresight = 90
-		lockedSensorFOV = 10
+		lockedSensorFOV = 14
 		radarLOAL = false
 		
-		//Terminal Guidance
-		terminalManeuvering = false // Shaking before hit to prevent CIWS.
-		terminalGuidanceShouldActivate = false // Terminal Guidance Kit
-		terminalGuidanceType = heat
-		terminalGuidanceDistance = 0
-		
 		// --- Missile specific ---
-		agmDescentRatio = 4
-		heatThreshold = 100
 		allAspect = false
 		
 		// --- Warhead ---
 		proxyDetonate = true
-		DetonationDistance = 70
+		DetonationDistance = 5 //70
 	
 		// --- Propulsion ---
 		thrust = 150
@@ -90,16 +82,16 @@ PART {
 		aero = true
 		optimumAirspeed = 1029
 		liftArea = 0.05
-		steerMult = 22
-		maxTorque = 28
-		maxAoA = 20
+		steerMult = 90
+		maxTorque = 240
+		maxAoA = 35
 		maxTurnRateDPS = 23
 		torqueRampUp = 50
 		
 		// --- Booster & Animation & Sound ---
 		decoupleBoosters = true
 		boosterMass = 0.589
-		boosterDecoupleSpeed = 2
+		boosterDecoupleSpeed = 1
 		boostTransformName = RIM-2B
 		boostExhaustTransformName = boostTransform
 		boostExhaustPrefabPath = BDArmory/Models/exhaust/mediumExhaust
