--- a/Missiles/sam_S25.cfg
+++ b/Missiles/sam_S25.cfg
@@ -60,23 +60,15 @@ PART {
 		targetingType = radar
 		activeRadarRange = 0
 		maxOffBoresight = 60
-		lockedSensorFOV = 15
+		lockedSensorFOV = 10
 		radarLOAL = false
 		
-		//Terminal Guidance
-		terminalManeuvering = false // Shaking before hit to prevent CIWS.
-		terminalGuidanceShouldActivate = false // Terminal Guidance Kit
-		terminalGuidanceType = heat
-		terminalGuidanceDistance = 0
-		
 		// --- Missile specific ---
-		agmDescentRatio = 4
-		heatThreshold = 100
 		allAspect = false
 		
 		// --- Warhead ---
 		proxyDetonate = true
-		DetonationDistance = 70
+		DetonationDistance = 5 //70	
 	
 		// --- Propulsion ---
 		thrust = 120
@@ -91,10 +83,10 @@ PART {
 		aero = true
 		optimumAirspeed = 857.5
 		liftArea = 0.05
-		steerMult = 20
-		maxTorque = 80
-		maxAoA = 15
-		maxTurnRateDPS = 10
+		steerMult = 99
+		maxTorque = 300
+		maxAoA = 30
+		maxTurnRateDPS = 24
 		torqueRampUp = 50
 		
 		// --- Booster & Animation & Sound ---
